# api/controllers/user.controller.go
@@ -1,62 +1,0 @@
-package controllers
-
-import (
-	"dfee/api/lib"
-	"dfee/api/services"
-	"net/http"
-	"strconv"
-
-	"github.com/gin-gonic/gin"
-)
-
-// UserController data type
-type UserController struct {
-	userService services.UserService
-	logger      lib.Logger
-}
-
-// NewUserController creates new user controller
-func NewUserController(userService services.UserService, logger lib.Logger) UserController {
-	return UserController{
-		userService: userService,
-		logger:      logger,
-	}
-}
-
-// GetOneUser gets one user
-// @Summary Get an user
-// @Description get string by ID
-// @Tags users
-// @Accept  json
-// @Produce  json
-// @Param id path int true "User ID"
-// @Success 200 {object} model.User
-// @Failure 400 {object} httputil.HTTPError
-// @Failure 404 {object} httputil.HTTPError
-// @Failure 500 {object} httputil.HTTPError
-// @Router /users/{id} [get]
-func (u UserController) GetOneUser(c *gin.Context) {
-	paramID := c.Param("id")
-
-	id, err := strconv.Atoi(paramID)
-	if err != nil {
-		u.logger.Zap.Error(err)
-		c.JSON(http.StatusBadRequest, gin.H{
-			"error": err,
-		})
-		return
-	}
-	user, err := u.userService.GetOneUser(int(id))
-
-	if err != nil {
-		u.logger.Zap.Error(err)
-		c.JSON(http.StatusInternalServerError, gin.H{
-			"error": err.Error(),
-		})
-		return
-	}
-
-	c.JSON(200, gin.H{
-		"data": user,
-	})
-}
